--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "texted-tool": {
       "commandName": "Project",
-      "commandLineArgs": "-if C:\\dev\\breeze\\cerber\\src\\common\\CommonAssemblyInfo.cs.template C:\\dev\\breeze\\cerber\\src\\common\\CommonAssemblyInfo.cs.temp \"\\[VERSION\\]\" \"1.0.0.4\""
+      "commandLineArgs": "-e=\"[^-]+\\-(?'value'\\d+)\" C:\\dev\\breeze\\cerber\\src\\common\\CommonAssemblyInfo.cs.template C:\\dev\\breeze\\cerber\\src\\common\\CommonAssemblyInfo.cs.temp \"\\[VERSION\\]\" \"v0.4-8-gx63ba73\""
     }
   }
 }
